# jobs-finder

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  PR_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
.opencode/: opencode.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/config/: default.toml  local.toml.example
backend/scripts/: capture_linkedin_geo_ids.py  extract_linkedin_cookies.py  run_scheduler_cycle.py  start_xvfb.sh
backend/src/jobs_finder/: main.py
backend/src/jobs_finder/application/: __init__.py  aggregator.py  dto.py  ports.py  stats_aggregator.py
backend/src/jobs_finder/application/usecases/: __init__.py  _cached_search.py  filter_jobs_by_intent.py  generate_adapted_cv.py  search_indeed_jobs.py  search_linkedin_jobs.py
backend/src/jobs_finder/domain/: exceptions.py  job.py  user_engagement.py  user_favorite.py  user_settings.py
backend/src/jobs_finder/infrastructure/: __init__.py  _playwright_lifecycle.py  aggregator_filters.py  config.py  keyword_score.py  pagination.py  scheduler.py
backend/src/jobs_finder/infrastructure/auth/: __init__.py  _jwt.py
backend/src/jobs_finder/infrastructure/cache/: _factory.py  redis_cache.py
backend/src/jobs_finder/infrastructure/cv/: __init__.py  _generator.py  _link_matcher.py  _parser.py  _template.py
backend/src/jobs_finder/infrastructure/engagement/: __init__.py  _supabase.py
backend/src/jobs_finder/infrastructure/indeed/: __init__.py  parsers.py  scraper.py
backend/src/jobs_finder/infrastructure/infojobs/: __init__.py  exceptions.py  parsers.py  scraper.py  throttle.py
backend/src/jobs_finder/infrastructure/linkedin/: __init__.py  auth_cookie.py  cookie_refresher.py  exceptions.py  parsers.py  scraper.py  throttle.py
backend/src/jobs_finder/infrastructure/llm/: _client.py  _cv_prompt.py  _factory.py  _intent.py  _intent_parser.py  _parser.py  _prompt.py  exceptions.py
backend/src/jobs_finder/infrastructure/location/: __init__.py  _infojobs_mapping.py  _mapping.py  _structured_mapping.py  hardcoded_resolver.py
backend/src/jobs_finder/infrastructure/persistence/: __init__.py  postgres_job_repository.py  sqlite_job_repository.py
backend/src/jobs_finder/infrastructure/rate_limit/: __init__.py  _hashing.py  in_memory_token_bucket.py
backend/src/jobs_finder/presentation/: app_factory.py  dependencies.py  exception_handlers.py  logging_config.py  middleware.py  schemas.py
backend/src/jobs_finder/presentation/routes/: __init__.py  aggregator.py  chat.py  cv.py  history.py  indeed.py  linkedin.py  scheduler_status.py  stats.py
backend/supabase/: README.md
backend/supabase/migrations/: 001_create_jobs_table.sql  002_user_storage.sql  003_user_csv.sql  004_fix_rls_grants.sql  005_fix_overflow_job_id_bigint.sql  006_grant_sequences.sql  007_add_with_check_to_rls_policies.sql  008_grant_jobs_insert_to_authenticated.sql  009_disable_rls_on_jobs.sql  20260621_0001_delete_current_user_rpc.sql  20260621_0002_user_csv_cascade_fk.sql  20260721_0001_subscriptions.sql  20260721_0002_billing_events.sql  20260721_0003_default_free_trigger.sql  20260721_0004_grant_sequences.sql
backend/supabase/scripts/: apply-billing-migrations.sh
backend/tests/: conftest.py  smoke_test.py
backend/tests/fixtures/: indeed_detail_panel.py  indeed_provider_data_jobcards.py  infojobs_search.py  linkedin_detail_panel.py  linkedin_geo_ids.md  linkedin_malaga_canonical.py  linkedin_search.py
backend/tests/integration/: test_aggregator_api.py  test_aggregator_defensive.py  test_aggregator_headers.py  test_aggregator_ranking.py  test_api.py  test_app_lifespan.py  test_chat_endpoint.py  test_chat_endpoint_2stage.py  test_chat_live.py  test_chat_streaming.py  test_chat_streaming_live.py  test_composition.py  test_cors.py  test_cv_auth.py  test_delete_user_rpc.py  test_history_api.py  test_history_cache_control.py  test_indeed_api.py  test_indeed_composition.py  test_indeed_infojobs_cache.py  test_infojobs_composition.py  test_infojobs_live.py  test_linkedin_auth_cookie.py  test_linkedin_cookie_refresh_wiring.py  test_linkedin_live.py  test_linkedin_stealth.py  test_rate_limit_concurrency.py  test_rate_limit_redis_degrade.py  test_rate_limit_redis_real.py  test_redis_cache_headers.py  test_scheduler_status_api.py  test_scheduler_wiring.py  test_smoke_both_routes.py  test_smoke_three_routes.py  test_start_xvfb.py  test_stats_endpoint.py
backend/tests/unit/: test_adapted_cv_template.py  test_aggregator.py  test_aggregator_filters.py  test_aggregator_ranking.py  test_aggregator_settings.py  test_cache_port.py  test_cached_job_search_use_case.py  test_chat_route.py  test_chat_schemas.py  test_chat_settings.py  test_chat_wiring.py  test_cv_parser.py  test_domain_job.py  test_engagement_repo.py  test_exceptions.py  test_extract_linkedin_cookies_script.py  test_fake_intent_extractor.py  test_filter_use_case.py  test_generate_adapted_cv.py  test_hardcoded_location_resolver.py  test_hashing.py  test_in_memory_token_bucket.py  test_indeed_exceptions.py  test_indeed_parsers.py  test_indeed_scraper.py  test_indeed_settings.py  test_indeed_throttle.py  test_indeed_use_case.py  test_infojobs_exceptions.py  test_infojobs_parsers.py  test_infojobs_scraper.py  test_infojobs_use_case.py  test_intent_extractor.py  test_intent_extractor_port.py  test_intent_parser.py  test_intent_settings.py  test_job.py  test_job_repository_port.py  test_keyword_score.py  test_link_matcher.py  (+34 more)
backend/tests/unit/_helpers/: fake_job_repository.py  fake_playwright_connection.py
deploy/: .env.production.example  Caddyfile  README.md  docker-compose.yml
frontend/: .env.example  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-workspace.yaml  tailwind.config.test.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.server-only-shim.ts  vitest.setup.ts
frontend/e2e/: auth-flows.spec.ts
frontend/messages/: en.json  es.json
openspec/: README.md
scripts/: capture_linkedin_geo_ids.py  check.sh
tests/: conftest.py
(+539 files in other folders)
