[project]
name = "jobs-finder"
version = "0.1.0"
description = "On-demand LinkedIn job search HTTP endpoint (educational/personal use)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "jobs-finder-dev" },
]
keywords = ["jobs", "linkedin", "scraper", "fastapi", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "playwright>=1.45,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
jobs-finder = "jobs_finder.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobs_finder"]

# --- Test runner -----------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
]

# --- Type checker ----------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

# --- Linter / formatter ----------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "PL"]
ignore = [
    "PLR0913",  # too-many-arguments — design will choose boundaries
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]  # magic numbers, asserts are fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
