[project]
name = "jobs-finder"
version = "0.1.0"
description = "On-demand LinkedIn job search HTTP endpoint (educational/personal use)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "jobs-finder-dev" },
]
keywords = ["jobs", "linkedin", "scraper", "fastapi", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "aiosqlite>=0.20,<1.0",
    "fastapi>=0.111,<1.0",
    "uvicorn>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "playwright>=1.45,<2.0",
    "playwright-stealth>=2.0,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "httpx>=0.27,<1.0",
    "redis>=5.0,<6.0",
    "pdfplumber>=0.11,<1.0",
    "weasyprint>=60.0,<62.0",
    "pydyf>=0.8.0,<0.11.0",  # pydyf >= 0.11 breaks weasyprint PDF generation (GitHub #2620)
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
    "asgi-lifespan>=2.0,<3.0",
    "fakeredis>=2.20,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
    "asgi-lifespan>=2.0,<3.0",
    "fakeredis>=2.20,<3.0",
]

[project.scripts]
jobs-finder = "jobs_finder.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobs_finder"]

# --- Test runner -----------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
]

# --- Type checker ----------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

# --- Linter / formatter ----------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "PL"]
ignore = [
    "PLR0913",  # too-many-arguments — design will choose boundaries
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]  # magic numbers, asserts are fine in tests
"tests/fixtures/**" = ["E501"]  # raw captured HTML has long lines
"tests/unit/test_infojobs_parsers.py" = ["E501"]  # raw HTML fixtures with long InfoJobs class names
# The LLM client's complete() method has many branches + statements by
# necessity: the selective retry policy distinguishes 5 failure modes
# (401/403, 429, 5xx, transient MiniMax codes, permanent MiniMax codes)
# and each needs its own error-mapping + retry decision. The
# alternative (extracting per-mode helpers) would scatter the policy
# across 5 small functions and make the retry contract harder to
# audit. The `cause=...` field on the exception is the documented
# chaining mechanism, so B904 is also silenced (we use `cause=`,
# not `raise ... from err`).
"src/jobs_finder/infrastructure/llm/_client.py" = ["PLR0912", "PLR0915", "B904", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
